created a 1000x10 array with simulated stock price

--- a/Monte Carlo- Forecasting Stock Prices.ipynb
+++ b/Monte Carlo- Forecasting Stock Prices.ipynb
@@ -233,10 +233,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(drift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(stdev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00026581])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(drift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00026581])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drift.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01092076])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stdev.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6448536269514722"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.ppf(0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.73163135, 0.80316216],\n",
+       "       [0.93558387, 0.13191557],\n",
+       "       [0.06247585, 0.90973026],\n",
+       "       [0.98242801, 0.98289162],\n",
+       "       [0.38605847, 0.29854388],\n",
+       "       [0.92760937, 0.46022613],\n",
+       "       [0.87288702, 0.79335431],\n",
+       "       [0.55260755, 0.30510593],\n",
+       "       [0.9355275 , 0.69627717],\n",
+       "       [0.89984294, 0.45158019]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.random.rand(10,2)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.61775431,  0.85297047],\n",
+       "       [ 1.5187229 , -1.11738175],\n",
+       "       [-1.53431693,  1.33909581],\n",
+       "       [ 2.10669543,  2.11750801],\n",
+       "       [-0.28960697, -0.52859309],\n",
+       "       [ 1.45821511, -0.09986405],\n",
+       "       [ 1.14014483,  0.81811526],\n",
+       "       [ 0.13225209, -0.50977107],\n",
+       "       [ 1.51827532,  0.513723  ],\n",
+       "       [ 1.28065717, -0.12166999]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.ppf(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.19336348,  1.88552281],\n",
+       "       [-1.03607164,  1.83218463],\n",
+       "       [-0.38864598, -1.24828789],\n",
+       "       [ 0.41685835,  0.20188029],\n",
+       "       [-2.15041845, -1.34573745],\n",
+       "       [ 1.5989349 ,  1.08868945],\n",
+       "       [-1.31277344, -0.28740939],\n",
+       "       [-0.02703462,  0.16987517],\n",
+       "       [-2.14604057, -0.7885357 ],\n",
+       "       [-0.19895014,  0.67311157]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(np.random.rand(10,2))\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_intervals = 1000\n",
+    "iterations = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "daily_returns = np.exp(drift.values + stdev.values * norm.ppf(np.random.rand(t_intervals, iterations)))"
+   ]
   }
  ],
  "metadata": {
