created a plot of 10 iterations of 1000 simulations for future projected stock price of pg

--- a/Monte Carlo- Forecasting Stock Prices.ipynb
+++ b/Monte Carlo- Forecasting Stock Prices.ipynb
@@ -452,12 +452,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "daily_returns = np.exp(drift.values + stdev.values * norm.ppf(np.random.rand(t_intervals, iterations)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.97118289, 1.0026502 , 1.00462887, ..., 1.01574852, 1.00031169,\n",
+       "        0.99898765],\n",
+       "       [1.02698722, 1.01452117, 1.00593281, ..., 0.98984187, 1.00124411,\n",
+       "        1.00287439],\n",
+       "       [0.99112242, 0.99098733, 0.99693959, ..., 0.99142718, 0.99410152,\n",
+       "        0.99177868],\n",
+       "       ...,\n",
+       "       [0.98807538, 1.00553494, 1.01309195, ..., 1.01416633, 1.00461841,\n",
+       "        0.99868642],\n",
+       "       [1.00123213, 1.00763465, 0.99223246, ..., 0.99358633, 1.00134826,\n",
+       "        0.99320869],\n",
+       "       [0.99617712, 1.01457779, 0.99753034, ..., 1.00333843, 0.99064417,\n",
+       "        1.002433  ]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PG    127.379997\n",
+       "Name: 2020-02-21 00:00:00, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s0 = data.iloc[-1]\n",
+    "s0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_list = np.zeros_like(daily_returns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[127.37999725, 127.37999725, 127.37999725, ..., 127.37999725,\n",
+       "        127.37999725, 127.37999725],\n",
+       "       [  0.        ,   0.        ,   0.        , ...,   0.        ,\n",
+       "          0.        ,   0.        ],\n",
+       "       [  0.        ,   0.        ,   0.        , ...,   0.        ,\n",
+       "          0.        ,   0.        ],\n",
+       "       ...,\n",
+       "       [  0.        ,   0.        ,   0.        , ...,   0.        ,\n",
+       "          0.        ,   0.        ],\n",
+       "       [  0.        ,   0.        ,   0.        , ...,   0.        ,\n",
+       "          0.        ,   0.        ],\n",
+       "       [  0.        ,   0.        ,   0.        , ...,   0.        ,\n",
+       "          0.        ,   0.        ]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_list[0] = s0\n",
+    "price_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-8fee3f776a72>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-8fee3f776a72>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for t in range(1, t_intervals)\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in range(1, t_intervals) price_list[t] = price_list[t - 1] * daily_returns[t]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
